# maya-ogre3d-exporter

./: CMakeLists.txt  README.md
include/: _singleton.h  animation.h  blendshape.h  material.h  materialSet.h  mayaExportLayer.h  mesh.h  ogreExporter.h  paramlist.h  particles.h  skeleton.h  submesh.h  vertex.h
mel/: ogreExporter.mel
src/: blendshape.cpp  material.cpp  materialSet.cpp  mesh.cpp  ogreExporter.cpp  paramlist.cpp  particles.cpp  skeleton.cpp  submesh.cpp
